feat: responsive main layout

--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "vite": "^4.4.9",
     "vitest": "^0.34.4"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "lucide-svelte": "^0.276.0"
+  }
 }
