--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
   },
   "type": "module",
   "dependencies": {
-    "lucide-svelte": "^0.276.0"
+    "@lucia-auth/adapter-prisma": "^3.0.2",
+    "@prisma/client": "^5.3.1",
+    "lucia": "^2.7.1",
+    "lucide-svelte": "^0.276.0",
+    "prisma": "^5.3.1"
   }
 }
