--- a/package.json
+++ b/package.json
@@ -11,41 +11,50 @@
     "test:unit": "vitest",
     "lint": "prettier --plugin prettier-plugin-svelte --check . && eslint .",
     "fmt": "prettier --plugin prettier-plugin-svelte --ignore-unknown --write .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "db:gen": "drizzle-kie generate:pg",
+    "db:push": "drizzle-kit push:pg",
+    "db:check": "drizzle-kit check:pg",
+    "db:drop": "drizzle-kit drop",
+    "db:studio": "drizzle-kit studio"
   },
   "lint-staged": {
     "**/*": "prettier --plugin prettier-plugin-svelte --ignore-unknown --write ."
   },
   "devDependencies": {
     "@poppanator/sveltekit-svg": "^4.1.3",
-    "@sveltejs/adapter-auto": "^2.1.0",
-    "@sveltejs/kit": "^1.24.1",
-    "@typescript-eslint/eslint-plugin": "^6.6.0",
-    "@typescript-eslint/parser": "^6.6.0",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.49.0",
+    "@sveltejs/adapter-auto": "^2.1.1",
+    "@sveltejs/kit": "^1.27.6",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "autoprefixer": "^10.4.16",
+    "drizzle-kit": "^0.20.4",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-svelte": "^2.33.1",
+    "eslint-plugin-svelte": "^2.35.0",
     "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "postcss": "^8.4.29",
-    "prettier": "^3.0.3",
-    "prettier-plugin-svelte": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "svelte": "^4.2.0",
-    "svelte-check": "^3.5.1",
-    "tailwindcss": "^3.3.3",
+    "lint-staged": "^15.1.0",
+    "pg": "^8.11.3",
+    "postcss": "^8.4.31",
+    "prettier": "^3.1.0",
+    "prettier-plugin-svelte": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "svelte": "^4.2.5",
+    "svelte-check": "^3.6.0",
+    "tailwindcss": "^3.3.5",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9",
-    "vitest": "^0.34.4"
+    "vite": "^5.0.0",
+    "vitest": "^0.34.6"
   },
   "type": "module",
   "dependencies": {
-    "@lucia-auth/adapter-prisma": "^3.0.2",
-    "@prisma/client": "^5.3.1",
-    "lucia": "^2.7.1",
-    "lucide-svelte": "^0.276.0",
-    "prisma": "^5.3.1"
+    "@lucia-auth/adapter-postgresql": "^2.0.2",
+    "@prisma/client": "^5.6.0",
+    "drizzle-orm": "^0.29.0",
+    "lucia": "^2.7.4",
+    "lucide-svelte": "^0.292.0",
+    "postgres": "^3.4.3",
+    "prisma": "^5.6.0"
   }
 }
