--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@lucia-auth/adapter-postgresql": "^2.0.2",
     "@prisma/client": "^5.6.0",
+    "dayjs": "^1.11.10",
     "drizzle-orm": "^0.29.0",
     "lucia": "^2.7.4",
     "lucide-svelte": "^0.292.0",
