--- a/package.json
+++ b/package.json
@@ -23,39 +23,38 @@
   },
   "devDependencies": {
     "@poppanator/sveltekit-svg": "^4.1.3",
-    "@sveltejs/adapter-auto": "^2.1.1",
-    "@sveltejs/kit": "^1.27.6",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
     "autoprefixer": "^10.4.16",
-    "drizzle-kit": "^0.20.4",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-svelte": "^2.35.0",
+    "drizzle-kit": "^0.20.9",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.35.1",
     "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
+    "lint-staged": "^15.2.0",
     "pg": "^8.11.3",
-    "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
-    "prettier-plugin-svelte": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "svelte": "^4.2.5",
-    "svelte-check": "^3.6.0",
-    "tailwindcss": "^3.3.5",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.1.2",
+    "prettier-plugin-tailwindcss": "^0.5.10",
+    "svelte": "^4.2.8",
+    "svelte-check": "^3.6.2",
+    "tailwindcss": "^3.4.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0",
-    "vitest": "^0.34.6"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10",
+    "vitest": "^1.1.1"
   },
   "type": "module",
   "dependencies": {
     "@lucia-auth/adapter-postgresql": "^2.0.2",
-    "@prisma/client": "^5.6.0",
     "dayjs": "^1.11.10",
-    "drizzle-orm": "^0.29.0",
-    "lucia": "^2.7.4",
-    "lucide-svelte": "^0.292.0",
-    "postgres": "^3.4.3",
-    "prisma": "^5.6.0"
+    "drizzle-orm": "^0.29.2",
+    "lucia": "^2.7.6",
+    "lucide-svelte": "^0.303.0",
+    "postgres": "^3.4.3"
   }
 }
