--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.10",
-    "vitest": "^1.1.1",
-    "semver": ">=7.5.2"
+    "vitest": "^1.1.1"
   },
   "type": "module",
   "dependencies": {
