--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ink",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
@@ -11,7 +12,7 @@
     "test:unit": "vitest",
     "lint": "prettier --plugin prettier-plugin-svelte --check . && eslint .",
     "fmt": "prettier --plugin prettier-plugin-svelte --ignore-unknown --write .",
-    "prepare": "husky install",
+    "prepare": "husky",
     "db:gen": "drizzle-kie generate:pg",
     "db:push": "drizzle-kit push:pg",
     "db:check": "drizzle-kit check:pg",
@@ -22,39 +23,38 @@
     "**/*": "prettier --plugin prettier-plugin-svelte --ignore-unknown --write ."
   },
   "devDependencies": {
-    "@poppanator/sveltekit-svg": "^4.1.3",
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "autoprefixer": "^10.4.16",
-    "drizzle-kit": "^0.20.9",
-    "eslint": "^8.56.0",
+    "@poppanator/sveltekit-svg": "^4.2.1",
+    "@sveltejs/adapter-auto": "^3.2.0",
+    "@sveltejs/kit": "^2.5.5",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "autoprefixer": "^10.4.19",
+    "drizzle-kit": "^0.20.14",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.35.1",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "pg": "^8.11.3",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "prettier-plugin-tailwindcss": "^0.5.10",
-    "svelte": "^4.2.8",
-    "svelte-check": "^3.6.2",
-    "tailwindcss": "^3.4.0",
+    "eslint-plugin-svelte": "^2.37.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "pg": "^8.11.5",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.3",
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "svelte": "^4.2.14",
+    "svelte-check": "^3.6.9",
+    "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.10",
-    "vitest": "^1.1.1"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.8",
+    "vitest": "^1.5.0"
   },
-  "type": "module",
   "dependencies": {
     "@lucia-auth/adapter-postgresql": "^2.0.2",
     "dayjs": "^1.11.10",
-    "drizzle-orm": "^0.29.2",
-    "lucia": "^2.7.6",
-    "lucide-svelte": "^0.303.0",
-    "postgres": "^3.4.3"
+    "drizzle-orm": "^0.30.8",
+    "lucia": "^2.7.7",
+    "lucide-svelte": "^0.368.0",
+    "postgres": "^3.4.4"
   }
 }
