--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "**/*": "prettier --plugin prettier-plugin-svelte --ignore-unknown --write ."
   },
   "devDependencies": {
-    "@poppanator/sveltekit-svg": "^4.2.1",
+    "@poppanator/sveltekit-svg": "5.0.0-svelte5.2",
     "@sveltejs/adapter-auto": "^3.2.0",
     "@sveltejs/kit": "^2.5.5",
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
@@ -41,7 +41,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.3",
     "prettier-plugin-tailwindcss": "^0.5.13",
-    "svelte": "^4.2.14",
+    "svelte": "^5.0.0-next.102",
     "svelte-check": "^3.6.9",
     "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
