--- a/package.json
+++ b/package.json
@@ -24,37 +24,37 @@
   },
   "devDependencies": {
     "@poppanator/sveltekit-svg": "5.0.0-svelte5.2",
-    "@sveltejs/adapter-auto": "^3.2.0",
-    "@sveltejs/kit": "^2.5.5",
-    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "@sveltejs/adapter-auto": "^3.2.1",
+    "@sveltejs/kit": "^2.5.10",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.19",
-    "drizzle-kit": "^0.20.14",
+    "drizzle-kit": "^0.22.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.37.0",
+    "eslint-plugin-svelte": "^2.39.0",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
+    "lint-staged": "^15.2.5",
     "pg": "^8.11.5",
     "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.0",
     "prettier-plugin-svelte": "^3.2.3",
-    "prettier-plugin-tailwindcss": "^0.5.13",
-    "svelte": "^5.0.0-next.120",
-    "svelte-check": "^3.6.9",
+    "prettier-plugin-tailwindcss": "^0.6.1",
+    "svelte": "5.0.0-next.148",
+    "svelte-check": "^3.8.0",
     "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
-    "vite": "^5.2.8",
-    "vitest": "^1.5.0"
+    "vite": "^5.2.12",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
     "@lucia-auth/adapter-postgresql": "^2.0.2",
-    "dayjs": "^1.11.10",
-    "drizzle-orm": "^0.30.8",
+    "dayjs": "^1.11.11",
+    "drizzle-orm": "^0.31.0",
     "lucia": "^2.7.7",
-    "lucide-svelte": "^0.368.0",
+    "lucide-svelte": "^0.381.0",
     "postgres": "^3.4.4"
   }
 }
