--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,13 @@
 {
   "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    }
+  ],
   "printWidth": 100,
   "arrowParens": "avoid"
 }
