--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "test:unit": "vitest",
-    "lint": "prettier --plugin prettier-plugin-svelte --check . && eslint .",
-    "fmt": "prettier --plugin prettier-plugin-svelte --ignore-unknown --write .",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "fmt": "prettier --write .",
+    "fmt:check": "prettier --check .",
     "prepare": "husky",
     "db:gen": "drizzle-kie generate:pg",
     "db:push": "drizzle-kit push:pg",
@@ -20,20 +22,20 @@
     "db:studio": "drizzle-kit studio"
   },
   "lint-staged": {
-    "**/*": "prettier --plugin prettier-plugin-svelte --ignore-unknown --write ."
+    "**/*": "prettier --write ."
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
     "@poppanator/sveltekit-svg": "5.0.0-svelte5.2",
     "@sveltejs/adapter-auto": "^3.2.1",
     "@sveltejs/kit": "^2.5.10",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.19",
     "drizzle-kit": "^0.22.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.4.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.39.0",
+    "globals": "^15.3.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
     "pg": "^8.11.5",
@@ -46,6 +48,7 @@
     "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^7.11.0",
     "vite": "^5.2.12",
     "vitest": "^1.6.0"
   },
